[build-system]
requires = ["Cython>=3.0",
            "scipy>=1.5",
            "numpy>=2.0",
            "setuptools",
            "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "nlsam"
version = '0.7.2'
authors = [{name = "Samuel St-Jean"}]
description='Implementation of "Non Local Spatial and Angular Matching : Enabling higher spatial resolution diffusion MRI datasets through adaptive denoising"'
readme = "README.md"
requires-python = ">=3.9"
license = {text = "GPLv3"}

dependencies = [
    'numpy>=1.21.3',
    'scipy>=1.5',
    'nibabel>=2.0',
    'joblib>=0.14.1',
    'autodmri>=0.2.1',
    'spams-bin>=2.6.2',
    'tqdm>=4.56']


[project.urls]
homepage = "https://github.com/samuelstjean/nlsam"
documentation = "https://nlsam.readthedocs.io/en/latest/"
changelog = "https://github.com/samuelstjean/nlsam/blob/master/CHANGELOG.md"
