[build-system]
requires = ["Cython>=3.0",
            "scipy>=1.5",
            "numpy>=2.0",
            "setuptools>=61.0",
            "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nlsam"
version = '0.7.2'
authors = [{name = "Samuel St-Jean"}]
description='Implementation of "Non Local Spatial and Angular Matching : Enabling higher spatial resolution diffusion MRI datasets through adaptive denoising"'
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
keywords = ["MRI", "diffusion", "dmri", "denoising"]
dependencies = [
    'numpy>=1.21.3',
    'scipy>=1.5',
    'nibabel>=2.0',
    'joblib>=0.14.1',
    'autodmri>=0.2.1',
    'spams-bin>=2.6.2',
    'tqdm>=4.56']

[project.urls]
homepage = "https://github.com/samuelstjean/nlsam"
documentation = "https://nlsam.readthedocs.io/en/latest/"
changelog = "https://github.com/samuelstjean/nlsam/blob/master/CHANGELOG.md"

[project.scripts]
nlsam_denoising = "nlsam.script:main_workaround_joblib"

[tool.cibuildwheel]
skip = "*musllinux*"
archs = ["auto64"]
test-requires = ['pytest']
test-command = "python -m pytest --pyargs nlsam --verbose"
